# spacegame

./: .gitattributes  AGENTS.md  BUGS.md  BUILDING.md  Cargo.toml  DOMAINS.md  FRONTEND.md  GALAXY-SCALE.md  GAMEPLAY.md  LIVING-GALAXY.md  NETCODE.md  OPERATIONS.md  README.md  SCALING.md  SPACEGAME-PLAY.md  STATE-MODEL.md  SYSTEMS.md  VISION.md  ceapp.toml  play.sh
benches/: bench.rs
deploy/: LIVE-STATUS.md  README.md  deploy.sh  smoke.sh  spa-serve.nginx  spacegame-host.service  spacegame-node.service  spacegame-seed.service
docs/: STATUS-vision21.md  world.md
galaxymap-web/: README.md  index.html
src/: aabb.rs  ai.rs  auth.rs  autoscale.rs  build.rs  cell.rs  client.rs  cloud_hetzner.rs  coords.rs  cosmos.rs  director.rs  domain.rs  editor.rs  effects.rs  faction.rs  fleet.rs  frontier.rs  galaxy.rs  galaxymap.rs  galaxywire.rs  gateway.rs  hazard.rs  leaderboard.rs  lib.rs  main.rs  mapview.rs  node.rs  noise.rs  orchestrator.rs  partition.rs  physics.rs  procgen.rs  replica.rs  replication.rs  room.rs  ruleset.rs  shaders.rs  shape.rs  shapedef.rs  shard.rs  (+9 more)
tests/: combat.rs  floating_origin.rs  global_content.rs  physics.rs  physics_frame.rs  systems.rs
